--- a/react/test.html
+++ b/react/test.html
@@ -6,14 +6,33 @@
   <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"></script>
+  <style>
+    body { margin: 0; padding: 0; font-family: sans-serif;}
+    .image {border-radius: 10px; overflow: hidden;}
+  </style>
 </head>
 <body>
   <div id="root"></div>
   <script type="text/babel">
-    const element = <h1>Hello World</h1>
+    // 1. 콘텐츠를 코드로 넣는 방법: {코드}
+    // 2. 속성을 코드로 넣는 방법: title={코드} (ㅇ) :: title="{코드}" (X)
+    // 3. 스타일 속성을 코드로 넣는 방법: style={객체} :: background-color => backgroundColor
+    const str = "Hello"
+    const imageUrl = "https://source.unsplash.com/random/400x300"
+    const customStyle = {
+      marginTop: 60, // px 생략
+      color: "red",
+      textAlign: "center"
+    }
+    
+    const element = (
+        <div style={{textAlign: "center"}}>
+          <h1 title={str} style={customStyle}>{str} World</h1>
+          <img className="image" src={imageUrl} alt="image" />
+        </div>
+    )
+    
     const root = document.getElementById('root')
-    // 첫 번째 매개 변수: 어떤요소를 넣을 것인가?
-    // 두 번째 매개 변수: 어디에 넣을 것인가?
     ReactDOM.render(element, root)
   </script>
 </body>
